# personKnowledge

./: .gitignore  README.md  pyproject.toml  start-frontend-assets.sh  start.sh  stop.sh
app/: cli.py  config.py
app/agents/: organizer_agent.py  query_agent.py  review_agent.py
app/ingest/: chunker.py  parser.py  pipeline.py  scanner.py  summarizer.py
app/memory/: database.py
app/tools/: citation_tool.py  embedding_tool.py  file_tool.py  openai_client.py  search_tool.py  secret_store.py  vector_tool.py
app/ui/: rendering.py
app/web/: ask.py  dashboard.py  inbox.py  knowledge.py  review.py  search.py  server.py  settings.py  tags.py  tasks.py
docs/: scheduling-macos.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
personal_ai_knowledge_butler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tasks/: project-architecture-mermaid.md  project-architecture-overview.md  project-development-roadmap.md  project-feature-status.md  project-module-status-matrix.md  project-todo-checklist.md
tests/: test_ask_web.py  test_dashboard.py  test_database.py  test_dedup.py  test_inbox_web.py  test_ingest_pipeline.py  test_knowledge_web.py  test_openai_client.py  test_organizer_agent.py  test_parser.py  test_query_agent.py  test_review_agent.py  test_review_runs.py  test_review_web.py  test_scanner.py  test_search.py  test_search_filters.py  test_search_web.py  test_secret_store.py  test_settings_web.py  test_tag_governance.py  test_tags_web.py  test_tasks_db.py  test_tasks_web.py  test_vector_search.py
(+27 files in other folders)
