[project]
name = "personal-ai-knowledge-butler"
version = "0.1.0"
description = "A local-first personal AI knowledge butler for organizing, searching, and reviewing notes."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
knowledge-butler = "app.cli:main"
kb = "app.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
